--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,10 @@
 	text-align: center;
 }
 
+.section-title p {
+	text-align: center;
+}
+
 .grey-bg-section {
 	background-color:white;
 	padding-top: 80px;
@@ -117,11 +121,7 @@
 	align-items: center;
 	margin-top: 80px;
 }
-.small-box:nth-child(4),
-.small-box:nth-child(5),
-.small-box:nth-child(6)
-{ 
-	margin-top: 30px; }
+
 .small-box {
 	background-color: white;
 	width: 369px;
@@ -154,4 +154,69 @@
 }
 .test-section {
 	background-color: blue;
+}
+
+.section-box3 {
+	background-image: url('../image/block.jpg.jpg');
+	background-repeat: no-repeat;
+	background-size:cover;
+	background-position:center;
+	height: 601px;
+	width:100%;
+	display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 130px;
+}
+
+.section-box3 h4 {
+	font-size: 100px;
+    font-family: lato;
+    color:white;
+
+}
+
+.section-box3 p {
+	font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    color:white;
+    text-align: center;
+}
+.section-flex-box {
+	display: flex;
+	justify-content: space-between;
+}
+
+.left-block-box {
+	width: 50%;
+	padding: 80px;
+}
+
+.right-block-box {
+	width: 50%;
+
+}
+
+.right-block-box img {
+
+     width: 100%;
+}
+
+.block-pa1{
+	font-size: 30px;
+	font-family: 'Lato', sans-serif;
+	text-align:left;
+}
+.block-pa2 {
+	font-size: 16px;
+	font-family: 'Poppins', sans-serif;
+	text-align:left;
+	margin-top: 44px;
+	margin-bottom: 57px;
+}
+
+.section-flex-box1 {
+	display: flex;
+	justify-content: space-between;
 }
