--- a/styles/style.css
+++ b/styles/style.css
@@ -199,8 +199,11 @@
 	width: 50%;
 
 }
+.right-block-box1 {
+	width: 50%; ,
+}
 
-.right-block-box img {
+.right-block-box1 img {
 
      width: 100%;
 
@@ -229,7 +232,7 @@
 
 }
 .right-box img {
-	width: 100%;
+	width:100%;
 }
 
 .left-box {
@@ -249,6 +252,4 @@
 	margin-top: 44px;
 	margin-bottom: 57px;	
 }
-.right-block-box1{
-      width: 50%;
-  }
+
